# vision.board.scar

./: README.md  环境搭建过程.md
FlowDetect/src/uCOS/: CMakeLists.txt  mem_pool_fixed.c  mem_pool_fixed.h  os_type.h
video_diagnosis.sdk/FlowDetect/src/: CMakeLists.txt  axi.c  axi_base.c  base.c  base.h  cfg.c  cfg.h  def.h  def_app.h  flame_monitor.c  flame_monitor.h  helloworld.c  init_destory.c  init_destory.h  life_cycle.h  linux_c_def.h  linux_header.h  main.c  msg_queue.c  msg_queue.h  opencv_base.c  opencv_base.h  printf_log.c  status.c  status.h  task_flow.c  task_flow.h  tcp_server.c  tcp_server.h  thread_dma_cpy.h  thread_fpga_cvt.h  timer.c  timer.h  type.c  type.h
video_diagnosis.sdk/FlowDetect/src/axi/: axi_api.c  axi_fpga_ctrl.h
video_diagnosis.sdk/FlowDetect/src/flame/: flame_sync.c  flame_sync.h
video_diagnosis.sdk/FlowDetect/src/flash/: cetc_flash.c
video_diagnosis.sdk/FlowDetect/src/flow_ctrl/: flow_sync.c  flow_sync.h
video_diagnosis.sdk/FlowDetect/src/fpga_base/: fpga_base.c  fpga_base.h
video_diagnosis.sdk/FlowDetect/src/fpga_first/: fpga_first.c  fpga_first.h
video_diagnosis.sdk/FlowDetect/src/fpga_second/: fpga_second.c  fpga_second.h
video_diagnosis.sdk/FlowDetect/src/hw_module/: dma.c  dma.h  dma_base.c  dma_base.h  dma_hw.c  dma_hw.h
video_diagnosis.sdk/FlowDetect/src/hw_module_base/: axi_api.c  axi_api.h
video_diagnosis.sdk/FlowDetect/src/img_cfg/: img_cfg.c  img_cfg.h  img_cfg_scar.c  img_cfg_scar.h  img_mask_cfg.c  img_mask_cfg.h  scar_cfg.c  scar_cfg.h
video_diagnosis.sdk/FlowDetect/src/img_proc/: Line2Point.c  Line2Point.h  (+2 more)
(+406 files in other folders)
