###############################################################################
INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
)
############≈‰÷√OPENCV#########################################################
C11_Config()
ConfigOpenCv()
CONFIGPTHREADS()
###############################################################################
ConfigMFC_2()
###############################################################################
SET(DIR_SRCS   
		os_mem.c	
		cpu.c
		mem_pool_fixed.c
		 )

ADD_LIBRARY(uCOS   STATIC    ${DIR_SRCS}  )



	